Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for sg3_utils-1.46 [20201109] [svn: r866]
  - sg_rep_pip: report new provisioning initialization pattern cmd
  - sg_turs: estimated time-to-ready [20-061r2]
    - add --delay=MS option
  - sg_requests: substantial cleanup
  - sg_dd: --verify : separate category for miscompare errors
    - --verify : oflag=coe continue on miscompares, counts them
    - add oflag=nocreat and conv=nocreat : OFILE must exist
    - add iflag=00,ff, random flags
  - sg_get_elem_status: add ralwd bit sbc4r20a
  - sg_write_x: add dld bits to write(32) [sbc4r19a]
  - sg_rep_zones: print invalid write pointer LBA as -1 rather
    than 16 "f"s
  - sg_ses: use fan speed factor field for calculation [ses4r04]
  - sg_compare_and_write: add examples section to its manpage
  - sg_modes: document '-s' option (same as '-6')
  - sg_raw: increase maximum data-in and data-out buffer size
    from 64 KB to 1 MB
    - fix --cmdfile= handling
    - add --nvm option to send commands from the NVM command set
  - sg_pt_solaris+sg_pt_osf1: fix problem with clear_scsi_pt_obj()
    which needs to remember is_nvme and dev_fd values
  - sg_lib: restore elements and rebuild command added
  - sg_lib,sg_pt: add partial_clear_scsi_pt_obj(),
    get_scsi_pt_cdb_len() and get_scsi_pt_cdb_buf()
    - add do_nvm_pt() for the NVM (sub-)command set
    - tweak transport error handling in Linux
  - sg_lib: Linux NVMe SNTL: add read, write and verify;
    synchronize cache and write same translations
    - add dummy start stop unit and test unit ready commands
    - wire cache mpage's WCE to nvme 'volatile write cache'
    - fix crash in sg_f2hex_arr() when fname not found
  - sg_lib: reprint cdb with illegal request sense key
    - asc/ascq match asc-num.txt @t10 20200708 [spc6r02]