@@ -2,11 +2,14 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.46 [20201109] [svn: r866]
+Changelog for sg3_utils-1.46 [20201114] [svn: r867]
   - sg_rep_pip: report new provisioning initialization pattern cmd
   - sg_turs: estimated time-to-ready [20-061r2]
     - add --delay=MS option
   - sg_requests: substantial cleanup
+  - sg_vpd: add Format presets and Concurrent positioning ranges
+    - add hot-pluggable field in standard Inquiry [20-0114r2]
+  - sg_inq: add hot-pluggable field in standard Inquiry
   - sg_dd: --verify : separate category for miscompare errors
     - --verify : oflag=coe continue on miscompares, counts them
     - add oflag=nocreat and conv=nocreat : OFILE must exist
